--- a/public/themes/luna-pink/theme.css
+++ b/public/themes/luna-pink/theme.css
@@ -241,17 +241,18 @@
 .p-autocomplete.p-autocomplete-dd .p-autocomplete-loader {
   right: 2.786rem;
 }
-.p-autocomplete .p-autocomplete-multiple-container {
-  padding: 0.2145rem 0.429rem;
-}
-.p-autocomplete .p-autocomplete-multiple-container:not(.p-disabled):hover {
+.p-autocomplete:not(.p-disabled):hover .p-autocomplete-multiple-container {
   border-color: #F48FB1;
 }
-.p-autocomplete .p-autocomplete-multiple-container:not(.p-disabled).p-focus {
+.p-autocomplete:not(.p-disabled).p-focus .p-autocomplete-multiple-container {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.1rem white;
   border-color: #F48FB1;
+}
+.p-autocomplete .p-autocomplete-multiple-container {
+  padding: 0.2145rem 0.429rem;
+  gap: 0.5rem;
 }
 .p-autocomplete .p-autocomplete-multiple-container .p-autocomplete-input-token {
   padding: 0.2145rem 0;
@@ -265,13 +266,20 @@
 }
 .p-autocomplete .p-autocomplete-multiple-container .p-autocomplete-token {
   padding: 0.2145rem 0.429rem;
-  margin-right: 0.5rem;
   background: #4b4b4b;
   color: #dedede;
   border-radius: 16px;
 }
 .p-autocomplete .p-autocomplete-multiple-container .p-autocomplete-token .p-autocomplete-token-icon {
   margin-left: 0.5rem;
+}
+.p-autocomplete .p-autocomplete-multiple-container .p-autocomplete-token.p-focus {
+  background: #464646;
+  color: #dedede;
+}
+.p-autocomplete .p-autocomplete-multiple-container .p-autocomplete-token:hover {
+  background: #585858;
+  color: #dedede;
 }
 .p-autocomplete.p-invalid.p-component > .p-inputtext {
   border-color: #e57373;
@@ -296,13 +304,20 @@
   transition: background-color 0.2s, border-color 0.2s, box-shadow 0.2s;
   border-radius: 0;
 }
-.p-autocomplete-panel .p-autocomplete-items .p-autocomplete-item:hover {
-  color: #dedede;
-  background: #4c4c4c;
-}
 .p-autocomplete-panel .p-autocomplete-items .p-autocomplete-item.p-highlight {
   color: #212529;
   background: #F48FB1;
+}
+.p-autocomplete-panel .p-autocomplete-items .p-autocomplete-item.p-highlight.p-focus {
+  background: #f48fb1;
+}
+.p-autocomplete-panel .p-autocomplete-items .p-autocomplete-item:not(.p-highlight):not(.p-disabled).p-focus {
+  color: #dedede;
+  background: #3c3c3c;
+}
+.p-autocomplete-panel .p-autocomplete-items .p-autocomplete-item:not(.p-highlight):not(.p-disabled):hover {
+  color: #dedede;
+  background: #4c4c4c;
 }
 .p-autocomplete-panel .p-autocomplete-items .p-autocomplete-item-group {
   margin: 0;
@@ -345,7 +360,7 @@
 .p-datepicker .p-datepicker-header .p-datepicker-next {
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -433,7 +448,7 @@
 .p-datepicker .p-timepicker button {
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -585,21 +600,23 @@
   transition: background-color 0.2s, border-color 0.2s, box-shadow 0.2s;
   border-radius: 0;
 }
-.p-cascadeselect-panel .p-cascadeselect-items .p-cascadeselect-item .p-cascadeselect-item-content {
-  padding: 0.429rem 0.857rem;
-}
-.p-cascadeselect-panel .p-cascadeselect-items .p-cascadeselect-item .p-cascadeselect-item-content:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem white;
-}
 .p-cascadeselect-panel .p-cascadeselect-items .p-cascadeselect-item.p-highlight {
   color: #212529;
   background: #F48FB1;
 }
+.p-cascadeselect-panel .p-cascadeselect-items .p-cascadeselect-item.p-highlight.p-focus {
+  background: #f48fb1;
+}
+.p-cascadeselect-panel .p-cascadeselect-items .p-cascadeselect-item:not(.p-highlight):not(.p-disabled).p-focus {
+  color: #dedede;
+  background: #3c3c3c;
+}
 .p-cascadeselect-panel .p-cascadeselect-items .p-cascadeselect-item:not(.p-highlight):not(.p-disabled):hover {
   color: #dedede;
   background: #4c4c4c;
+}
+.p-cascadeselect-panel .p-cascadeselect-items .p-cascadeselect-item .p-cascadeselect-item-content {
+  padding: 0.429rem 0.857rem;
 }
 .p-cascadeselect-panel .p-cascadeselect-items .p-cascadeselect-item .p-cascadeselect-group-icon {
   font-size: 0.875rem;
@@ -672,17 +689,17 @@
   border-color: #212529;
 }
 
-.p-chips .p-chips-multiple-container {
-  padding: 0.2145rem 0.429rem;
-}
-.p-chips .p-chips-multiple-container:not(.p-disabled):hover {
+.p-chips:not(.p-disabled):hover .p-chips-multiple-container {
   border-color: #F48FB1;
 }
-.p-chips .p-chips-multiple-container:not(.p-disabled).p-focus {
+.p-chips:not(.p-disabled).p-focus .p-chips-multiple-container {
   outline: 0 none;
   outline-offset: 0;
   box-shadow: 0 0 0 0.1rem white;
   border-color: #F48FB1;
+}
+.p-chips .p-chips-multiple-container {
+  padding: 0.2145rem 0.429rem;
 }
 .p-chips .p-chips-multiple-container .p-chips-token {
   padding: 0.2145rem 0.429rem;
@@ -690,6 +707,14 @@
   background: #4b4b4b;
   color: #dedede;
   border-radius: 16px;
+}
+.p-chips .p-chips-multiple-container .p-chips-token:hover {
+  background: #585858;
+  color: #dedede;
+}
+.p-chips .p-chips-multiple-container .p-chips-token.p-focus {
+  background: #464646;
+  color: #dedede;
 }
 .p-chips .p-chips-multiple-container .p-chips-token .p-chips-token-icon {
   margin-left: 0.5rem;
@@ -811,7 +836,7 @@
   background: #F48FB1;
 }
 .p-dropdown-panel .p-dropdown-items .p-dropdown-item.p-highlight.p-focus {
-  background: rgba(244, 143, 177, 0.24);
+  background: #f48fb1;
 }
 .p-dropdown-panel .p-dropdown-items .p-dropdown-item:not(.p-highlight):not(.p-disabled).p-focus {
   color: #dedede;
@@ -1213,7 +1238,7 @@
   background: transparent;
 }
 .p-listbox:not(.p-disabled) .p-listbox-item.p-highlight.p-focus {
-  background: rgba(244, 143, 177, 0.24);
+  background: #f48fb1;
 }
 .p-listbox:not(.p-disabled) .p-listbox-item:not(.p-highlight):not(.p-disabled).p-focus {
   color: #dedede;
@@ -1310,7 +1335,7 @@
   margin-left: 0.5rem;
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -1343,7 +1368,7 @@
   background: #F48FB1;
 }
 .p-multiselect-panel .p-multiselect-items .p-multiselect-item.p-highlight.p-focus {
-  background: rgba(244, 143, 177, 0.24);
+  background: #f48fb1;
 }
 .p-multiselect-panel .p-multiselect-items .p-multiselect-item:not(.p-highlight):not(.p-disabled).p-focus {
   color: #dedede;
@@ -1475,16 +1500,17 @@
 .p-rating .p-rating-icon.p-rating-cancel {
   color: #e4018d;
 }
-.p-rating .p-rating-icon:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: 0 0 0 0.1rem white;
-}
 .p-rating .p-rating-icon:first-child {
   margin-left: 0;
 }
 .p-rating .p-rating-icon.pi-star-fill {
   color: #F48FB1;
+}
+.p-rating:not(.p-disabled):not(.p-readonly) .p-rating-icon.p-focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 0.1rem white;
+  border-color: #F48FB1;
 }
 .p-rating:not(.p-disabled):not(.p-readonly) .p-rating-icon:hover {
   color: #F48FB1;
@@ -2479,7 +2505,7 @@
 .p-carousel .p-carousel-content .p-carousel-next {
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -2618,7 +2644,7 @@
 .p-datatable .p-datatable-tbody > tr > td .p-row-editor-cancel {
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -2800,7 +2826,7 @@
 .p-column-filter-menu-button {
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -2828,7 +2854,7 @@
 .p-column-filter-clear-button {
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -3062,7 +3088,7 @@
   font-size: 1rem;
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -3469,7 +3495,7 @@
   margin-right: 0.5rem;
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -3621,7 +3647,7 @@
 .p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler {
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -3884,7 +3910,7 @@
 .p-panel .p-panel-header .p-panel-header-icon {
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -4073,7 +4099,7 @@
 .p-dialog .p-dialog-header .p-dialog-header-icon {
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -4177,7 +4203,7 @@
 .p-sidebar .p-sidebar-header .p-sidebar-icon {
   width: 2rem;
   height: 2rem;
-  color: #8888;
+  color: rgba(136, 136, 136, 0.5333333333);
   border: 0 none;
   background: transparent;
   border-radius: 50%;
